Wordpress api fixes
